--- a/tool.html
+++ b/tool.html
@@ -305,7 +305,7 @@
                 document.getElementById("start").value = null;
 
                 var outputDiv = document.getElementById("output");
-                var serverConfig = "已清空！"
+                var serverConfig = ""
                 outputDiv.innerHTML = serverConfig;
                 var lines = outputDiv.innerHTML.split("<br>");
                 updateStatsTable();
