--- a/tool.html
+++ b/tool.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #BBB;
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
@@ -191,14 +191,14 @@
 
         .left-side {
             float: left;
-            width: 50%;
+            width: 45%;
             box-sizing: border-box;
             /* 包含內邊距和邊框在內的寬度 */
         }
 
         .right-side {
             float: right;
-            width: 50%;
+            width: 45%;
             box-sizing: border-box;
             min-width: 0;
             /* 使得左右內容能夠被壓縮到最小寬度 */
@@ -289,6 +289,8 @@
                 <button type="button" class="undo" onclick="undo()" title="可以往回五步">上一步</button>
             </form>
         </div>
+
+        </br>
 
         <div class="right-side">
             <form id="configForm">
