--- a/dev.html
+++ b/dev.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #BBB;
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
