--- a/tool.html
+++ b/tool.html
@@ -144,6 +144,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow-y: scroll;
             text-align: left;
+            border: 2px solid #007bff;/* 添加邊框以增加可見性 */
         }
 
         .center-text {
@@ -158,6 +159,7 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border: 2px solid #007bff;/* 添加邊框以增加可見性 */
             /* overflow: hidden; */
             /* 將溢出部分隱藏，使表格外觀更加整潔 */
         }
