--- a/tool.html
+++ b/tool.html
@@ -250,7 +250,7 @@
 
 <body>
     <header>
-        <h2>閃炫記錄工具</h2>
+        <h2 title="網頁寬度小於1100px時自動變成一排">閃炫記錄工具</h2>
     </header>
 
     <div class="container">
@@ -329,6 +329,7 @@
         var serverStats = {};
         var textData;
         var setButton = false;
+        console.log("謝謝阿炭! 那個頭貼我超愛!");
 
         //-----------------------本機儲存類-----------------------\\
         window.onload = function () {//讀取網頁存取過的資料
