--- a/tool.html
+++ b/tool.html
@@ -331,7 +331,7 @@
         var serverStats = {};
         var textData;
         var setButton = false;
-        console.log("謝謝阿炭! 那個頭貼我超愛!");
+        //console.log("謝謝阿炭! 那個頭貼我超愛!");
 
         //-----------------------本機儲存類-----------------------\\
         window.onload = function () {//讀取網頁存取過的資料
