--- a/tool.html
+++ b/tool.html
@@ -323,7 +323,7 @@
                     <option value="艾麗亞">艾麗亞</option>
                     <option value="普力特">普力特</option>
                     <option value="琉德">琉德</option>
-                    <option value="優伊娜">優伊娜</option>
+                    <option value="優依娜">優依娜</option>
                     <option value="愛麗西亞">愛麗西亞</option>
                     <option value="殺人鯨">殺人鯨</option>
                 </select><br>
@@ -587,7 +587,7 @@
         //排序
         function sortTableByServerOrder(tableData) {
             //排序順序
-            const serverOrder = ["艾麗亞", "普力特", "琉德", "優伊娜", "愛麗西亞", "殺人鯨"];
+            const serverOrder = ["艾麗亞", "普力特", "琉德", "優依娜", "愛麗西亞", "殺人鯨"];
             const shapeOrder = ["閃炫", "結合", "傳說卷", "剪刀"];
 
         
