--- a/tool.html
+++ b/tool.html
@@ -301,7 +301,9 @@
 
 <body>
     <header>
-        <h2 title="網頁寬度小於1100px時自動變成一排">閃炫記錄工具</h2>
+        <h2 title="">閃炫記錄工具
+            <a href="https://miller2415.github.io/ToolOfDoc--V1.2.0/dev.html" target="_blank">萬聖節版本</a>
+        </h2>
     </header>
 
     <div class="container">
