--- a/tool.html
+++ b/tool.html
@@ -302,7 +302,7 @@
 <body>
     <header>
         <h2 title="">閃炫記錄工具
-            <a href="https://miller2415.github.io/ToolOfDoc--V1.2.0/dev.html" target="_blank">萬聖節版本</a>
+            <!--<a href="https://miller2415.github.io/ToolOfDoc--V1.2.0/dev.html" target="_blank">萬聖節版本</a>-->
         </h2>
     </header>
 
