--- a/tool.html
+++ b/tool.html
@@ -340,7 +340,7 @@
                     <input type="radio" id="scissors" name="shape" value="剪刀" onchange="updateStartCount()">
                     <label for="scissors">剪刀</label>
                 </div>
-                <h for="" title="">#可以只儲存起始數量</h>
+                <h for="" title="">#五周年快樂OvO</h>
                 <label for="start" title="最下方表格中有儲存過的將會自動填寫">起始數量:</label>
                 <input type="number" id="start" name="start" min="0"><br>
                 <label for="end" title="可以直接enter了">最終數量:</label>
